--- a/index.html
+++ b/index.html
@@ -23,21 +23,21 @@
           <div class="input-field">
             <i class="far fa-clone"></i>
             <input type="number" placeholder="Kitob betini kiriting..." min="1" id="KitobBetlarSoni" minlength="1"
-              autocomplete="off" required />
+              autocomplete="off"  />
           </div>
           <div class="input-field">
             <i class="fas fa-chevron-down" id="format"></i>
-            <input type="text" placeholder="Format Turini Tanlang..." value="A5" required id="formatType"
+            <input type="text" placeholder="Format Turini Tanlang..." value="A5"  id="formatType"
               readonly="readonly" onclick="myformatFunction()" />
           </div>
           <div class="input-field">
             <i class="fas fa-chevron-down" id="qogoz"></i>
-            <input type="text" placeholder="Qog'oz Turini Tanlang..." value="Oq-qora" required id="qogozType"
+            <input type="text" placeholder="Qog'oz Turini Tanlang..." value="Oq-qora"  id="qogozType"
               readonly="readonly" onclick="myqogozFunction()" />
           </div>
           <div class="input-field">
             <i class="fas fa-phone-alt"></i>
-            <input type="tel" placeholder="Telefon raqamingizni kiriting..." minlength="4" maxlength="13" required
+            <input type="tel" placeholder="Telefon raqamingizni kiriting..." minlength="4" maxlength="13" 
               id="phoneNumber" value="+998" autocomplete="off" />
           </div>
 <!-- 
